Test building frontend package

--- a/package/debian/kframework-frontend/changelog
+++ b/package/debian/kframework-frontend/changelog
@@ -1,4 +1,4 @@
-kframework-minimal (7.0.0) unstable; urgency=medium
+kframework-frontend (7.0.41) unstable; urgency=medium
 
   * Initial Release.
 
