--- a/package/debian/kframework-frontend/changelog
+++ b/package/debian/kframework-frontend/changelog
@@ -2,4 +2,4 @@ kframework-frontend (7.1.0) unstable; urgency=medium
 
   * Initial Release.
 
- -- Bruce Collie <bruce.collie@runtimeverification.com>  Thu, 2 May 2024 10:52:06 +0100
+ -- Tamas Toth <tamas.toth@runtimeverification.com>  Thu, 2 May 2024 10:52:06 +0100
